--- a/package.json
+++ b/package.json
@@ -27,12 +27,17 @@
   },
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.7",
     "@emotion/react": "11.0.0",
     "@emotion/styled": "11.0.0",
+    "babel-plugin-emotion": "^11.0.0",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
+    "graphql": "^15.4.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-spinners": "^0.10.4",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
@@ -54,6 +59,7 @@
     "@types/node": "12.12.38",
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "babel-jest": "26.2.2",
